--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -28,7 +28,7 @@ main{
     transform:translate(-50%, -50%);
 
 
-    height: 611px;
+    height: 627px;
     width: 311px;
     background:url(../imagens/frame-iphone.png) no-repeat;
 }
@@ -40,4 +40,24 @@ iframe#tela{
 
     height: 471px;
     width: 269px;
+}
+#redessociais{
+    text-align: right;
+
+}
+#redessociais img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin: 10px;
+    margin-top: 30px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.403);
+    box-sizing: border-box;
+
+}
+#redessociais img:hover{
+    border: 1px solid rgba(255, 255, 255, 0.351);
+    transform: translate(-4px, -4px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.626);
+    transition: transform 0.4s, border 0.4s, box-shadow 0.4s;
 }
